; ModuleID = '/home/carl/AnghaBench/openssl/crypto/ts/extr_ts_conf.c_TS_CONF_load_cert.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/ts/extr_ts_conf.c_TS_CONF_load_cert.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"r\00", align 1
@TS_F_TS_CONF_LOAD_CERT = common dso_local global i32 0, align 4
@TS_R_CANNOT_LOAD_CERT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @TS_CONF_load_cert(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i8* %0, i8** %2, align 8
  store i32* null, i32** %3, align 8
  store i32* null, i32** %4, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = call i32* @BIO_new_file(i8* %5, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i32* %6, i32** %3, align 8
  %7 = icmp eq i32* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  br label %12

9:                                                ; preds = %1
  %10 = load i32*, i32** %3, align 8
  %11 = call i32* @PEM_read_bio_X509_AUX(i32* %10, i32* null, i32* null, i32* null)
  store i32* %11, i32** %4, align 8
  br label %12

12:                                               ; preds = %9, %8
  %13 = load i32*, i32** %4, align 8
  %14 = icmp eq i32* %13, null
  br i1 %14, label %15, label %19

15:                                               ; preds = %12
  %16 = load i32, i32* @TS_F_TS_CONF_LOAD_CERT, align 4
  %17 = load i32, i32* @TS_R_CANNOT_LOAD_CERT, align 4
  %18 = call i32 @TSerr(i32 %16, i32 %17)
  br label %19

19:                                               ; preds = %15, %12
  %20 = load i32*, i32** %3, align 8
  %21 = call i32 @BIO_free(i32* %20)
  %22 = load i32*, i32** %4, align 8
  ret i32* %22
}

declare dso_local i32* @BIO_new_file(i8*, i8*) #1

declare dso_local i32* @PEM_read_bio_X509_AUX(i32*, i32*, i32*, i32*) #1

declare dso_local i32 @TSerr(i32, i32) #1

declare dso_local i32 @BIO_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
